file names updated

--- a/onas.html
+++ b/onas.html
@@ -38,9 +38,9 @@
 
 <header>
 <div class="row">
-  <div class="col-sm-1 col-sm-offset-3"><a href="glowna.html">Główna</a></div>
+  <div class="col-sm-1 col-sm-offset-3"><a href="index.html">Główna</a></div>
   <div class="col-sm-1"><a href="jezyki.html">Oferta</a></div>
-  <div class="col-sm-2"> <div class="rybka"><center><a href="glowna.html"><img src="75d5fcc5-78fd-4849-8ae5-16d0f5094a712.png" height="100px"> </div>
+  <div class="col-sm-2"> <div class="rybka"><center><a href="index.html"><img src="75d5fcc5-78fd-4849-8ae5-16d0f5094a712.png" height="100px"> </div>
       </a></center>  </div>
   <div class="col-sm-1"><a href="onas.html"><b>O nas</b></a></div>
   <div class="col-sm-1"><a href="kontakt.html">Kontakt</a></div>
