--- a/onas.html
+++ b/onas.html
@@ -69,7 +69,7 @@
         </ul>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" src="http://www.starostwograjewo.pl/pl/00342/var/resources/141/214/102/zdj_szkoly_w_woj.jpg" alt="szkola">
+          <img class="featurette-image img-responsive center-block" src="flags.jpg" alt="szkola">
         </div>
       </div>
 
