--- a/kontakt.html
+++ b/kontakt.html
@@ -42,7 +42,7 @@
         <div class="col-sm-6 col-sm-offset-1">
           
           <ul>
-<h2 class="featurette-heading">Dialektika <span class="text-muted"> nauka języka</span></h2>
+<h2 class="featurette-heading">DIALEKTIKA <span class="text-muted"> nauka języka</span></h2>
 <br>
 <center>
 <p class="lead"> zapraszamy do kontaktu i do odwiedzenia nas na facebooku. </p>
