--- a/kontakt.html
+++ b/kontakt.html
@@ -57,11 +57,12 @@
 
 </center>
 
-
-
         </ul>
         </div>
-        <div class="col-md-5">
+
+
+
+        <div class="col-sm-5">
           <br>
 <div id="formularz">
 
@@ -103,8 +104,6 @@
 
       </div>
       </div>
-
-      <hr class="featurette-divider">
 
 
       <!-- /END THE FEATURETTES -->    
