style: margins, spaces etc

--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
 ================================================== -->
 
 
-<header >
-<div class="row">
+<header class="container">
+  <div class="row">
 
-  <div class="col-sm-1 col-sm-offset-3"><a href="index.html"><b>Główna</b></a></div>
-  <div class="col-sm-1"><a href="jezyki.html">Oferta</a></div> 
+  <div class="col-sm-1 col-sm-offset-3"><center><a href="index.html">Start</a></center></div>
+  <div class="col-sm-1"><center><a href="jezyki.html">Oferta</a></center></div> 
   <div class="col-sm-2"> <center><a href="index.html"><img src="rybka.svg" height="100px"> 
-      </a></center>  </div>
-  <div class="col-sm-1"><a href="onas.html">O nas</a></div>
-  <div class="col-sm-1"><a href="kontakt.html">Kontakt</a></div>
+      </a>  </center></div>
+  <div class="col-sm-1" > <center><a href="onas.html">O nas</a></center></div>
+  <div class="col-sm-1"> <center><a href="kontakt.html">Kontakt</a></center></div>
            
 </div>
 </header>
@@ -64,17 +64,17 @@ To use this code on your website, get a free API key from Google.
 Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
 -->
 
+      <hr class="featurette-divider">
 
 
       <!-- FOOTER -->
 <footer class="container">
   <div class="row">
-    <p class="col-sm-4">&copy; 2016 Lekti</p>
+    <p class="col-sm-4">&copy; 2017 sosnovska</p>
     <ul class="col-sm-8">
-    <li class="col-sm-1"><img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/twitter.svg"></li>
+    
   <li class="col-sm-1"><a href="https://www.facebook.com/dialektika.naukajezyka"><img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/facebook.svg"></a></li>
-  <li class="col-sm-1"> <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/instagram.svg"></li>
-    </ul>
+   </ul>
   </div>
 </footer>
  
